source_set("app") {
  public_configs = [
    "//electron/build:electron_config",
  ]

  sources = [
    "muon_crash_reporter_client.cc",
    "muon_crash_reporter_client.h",
  ]

  deps = [
    "//base",
    "//components/crash/content/app",
    "//components/metrics",
    "//components/prefs",
    "//electron:electron_version_header",
    "//electron/chromium_src:browser",
    "//electron/chromium_src:app",
  ]

  if (is_mac || is_win) {
    deps += [
      "//third_party/crashpad/crashpad/handler:crashpad_handler",
      "//third_party/crashpad/crashpad/tools:crashpad_database_util",
    ]
  }

  if (is_win) {
    deps += [
      "//chrome/install_static:install_static_util",
    ]
  }
}
